FD6SL-183 game card fixed on small devices screen

--- a/src/components/game-card-view/game-card-view.css
+++ b/src/components/game-card-view/game-card-view.css
@@ -74,3 +74,9 @@
   border-radius: 5px;
 }
 
+@media screen and (max-width: 320px) {
+  .panel-header h3 {
+    font-size: 20px;
+    margin-left: -15px;
+  }
+}
